--- a/css/styles.css
+++ b/css/styles.css
@@ -6,14 +6,28 @@ body {
 #title h1 {
   text-align: center;
   font-family: Next Custom;
-  color: #C42210;
-  margin-top: 1em;
+  color: #AD4CE6;
+  margin-top: 2em;
 
+}
+
+.colorDice img{
+  width: 60em;
+  margin-left: -330px;
+
+}
+
+#configSubmit {
+  text-align: left;
+  margin-top: 15px;
 }
 
 #title {
   background-color: #286DA8;
+}
 
+.col-xs-9 img {
+  width: 50em;
 }
 
 .center {
@@ -32,7 +46,7 @@ body {
   text-align: center;
 }
 
-.right h2{
+.right, #totalOutput{
   font-family: 'Righteous', cursive;
 }
 
@@ -47,21 +61,22 @@ body {
 
 }
 
-#player1 {
-  border-right: 8px;
+#p1board {
+  text-align: center;
 }
 
-#player2 {
-
+#p2board {
+  text-align: center;
 }
 
-#player1 {
-
+#p3board {
+  text-align: center;
 }
 
-#player1 {
-
+#p4board {
+  text-align: center;
 }
+
 #p1flag {
   color:green;
 }
@@ -72,7 +87,7 @@ body {
 
 h1 {
   font-family: 'Baloo Da', cursive;
-  font-size: 23em;
+  font-size: 15px;
 }
 
 #form_input, #p1Wins, #p2Wins {
